[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/game_over_popup.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.08, 0.08, 0.1, 0.96)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 0.9, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameOverPopup" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 620.0
offset_top = 250.0
offset_right = 1300.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
offset_left = 30.0
offset_top = 24.0
offset_right = 650.0
offset_bottom = 406.0
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_font_sizes/font_size = 34
text = "Game Over"
horizontal_alignment = 1

[node name="CuredLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_font_sizes/font_size = 24
text = "Patients Cured: 0"
horizontal_alignment = 1

[node name="SatisfactionLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_font_sizes/font_size = 22
text = "Patient Satisfaction: 0.0% (time used: 0.0%)"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_font_sizes/font_size = 24
text = "Final Score: 0.0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 52)
theme_override_font_sizes/font_size = 24
text = "Restart"
